--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>遊戲資料庫預覽系統</title>
+    <title>對打機資料庫預覽系統</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎮 遊戲資料庫預覽系統</h1>
+            <h1>🎮 對打機資料庫預覽系統</h1>
             <div class="controls">
                 <input type="file" id="fileInput" accept=".xlsx,.xls" style="display: none;">
                 <button id="loadBtn" class="btn-primary">選擇 Excel 檔案</button>
