Update: 簡化標題為「對打機資料庫」

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>對打機資料庫預覽系統</title>
+    <title>對打機資料庫</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎮 對打機資料庫預覽系統</h1>
+            <h1>🎮 對打機資料庫</h1>
             <div class="controls">
                 <input type="file" id="fileInput" accept=".xlsx,.xls" style="display: none;">
                 <button id="loadBtn" class="btn-primary">選擇 Excel 檔案</button>
@@ -40,7 +40,7 @@
         <!-- 歡迎訊息 -->
         <div id="welcomeView" class="view-container">
             <div class="welcome-message">
-                <h2>歡迎使用資料庫預覽系統</h2>
+                <h2>歡迎使用對打機資料庫</h2>
                 <p>點擊「選擇 Excel 檔案」按鈕開始讀取 Excel 檔案</p>
             </div>
         </div>
